<resources>
    <string name="app_name">TP4</string>
    <string name="other_item">Other</string>
    <string name="settings_item">Settings</string>
    <string name="tp4_menu_amp_toasts"><![CDATA[TP4 - Menu & Toasts]]></string>
    <string name="aide">Aide</string>
    <string name="a_propos">A propos</string>
    <string name="accueil">Accueil</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="connect">Connect</string>
    <string name="after">After</string>
    <string name="before">Before</string>
</resources>